# OpencvVideoTest

./: .gitignore  CMakeLists.txt
OpencvBinaryTest/: CMakeLists.txt  OpencvBinaryTest.cpp
OpencvVideoTest/: CMakeLists.txt  OpencvVideoTest.cpp  OpencvVideoTest.h
